[gd_scene load_steps=3 format=3 uid="uid://ckjkdabkuqxds"]

[ext_resource type="Script" path="res://Scripts/Other/UIVeiwport.gd" id="1_5ejkn"]

[sub_resource type="LabelSettings" id="LabelSettings_dq1wc"]
font_size = 32

[node name="UIVeiwport" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_5ejkn")

[node name="UI" type="Control" parent="."]
process_mode = 1
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SelectionPanel" type="Panel" parent="UI"]
process_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 16.0
anchor_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="UI/SelectionPanel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -68.0
offset_right = 72.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="Button2" type="Button" parent="UI/SelectionPanel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -20.0
offset_right = 72.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"

[node name="Button3" type="Button" parent="UI/SelectionPanel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 28.0
offset_right = 72.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="OptionsPanel" type="Panel" parent="UI"]
process_mode = 1
layout_mode = 0
offset_left = -640.0
offset_bottom = 360.0

[node name="Button" type="Button" parent="UI/OptionsPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -40.0
offset_right = 104.0
offset_bottom = -8.0
grow_vertical = 0
text = "Back"

[node name="VolumeLabel" type="Label" parent="UI/OptionsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -136.0
offset_right = -250.0
offset_bottom = -91.0
grow_horizontal = 0
grow_vertical = 2
text = "Volume"
label_settings = SubResource("LabelSettings_dq1wc")

[node name="MasterVolumeLabel" type="Label" parent="UI/OptionsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -472.0
offset_top = -72.0
offset_right = -417.0
offset_bottom = -48.0
grow_horizontal = 0
grow_vertical = 2
text = "Master"

[node name="HSlider" type="HSlider" parent="UI/OptionsPanel/MasterVolumeLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -12.0
offset_right = 233.0
offset_bottom = 11.0
grow_horizontal = 0
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="MusicVolumeLabel" type="Label" parent="UI/OptionsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -472.0
offset_top = -16.0
offset_right = -417.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
text = "Music"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="UI/OptionsPanel/MusicVolumeLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -12.0
offset_right = 233.0
offset_bottom = 11.0
grow_horizontal = 0
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFXVolumeLabel" type="Label" parent="UI/OptionsPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -472.0
offset_top = 40.0
offset_right = -417.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 2
text = "SFX"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="UI/OptionsPanel/SFXVolumeLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -12.0
offset_right = 233.0
offset_bottom = 11.0
grow_horizontal = 0
grow_vertical = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="ColorRect" type="ColorRect" parent="UI"]
process_mode = 1
visible = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="UI/SelectionPanel/Button" to="." method="_Resume"]
[connection signal="pressed" from="UI/SelectionPanel/Button2" to="." method="_Options"]
[connection signal="pressed" from="UI/SelectionPanel/Button3" to="." method="_Exit"]
[connection signal="pressed" from="UI/OptionsPanel/Button" to="." method="_Back"]
[connection signal="value_changed" from="UI/OptionsPanel/MasterVolumeLabel/HSlider" to="." method="_MaSlider"]
[connection signal="value_changed" from="UI/OptionsPanel/MusicVolumeLabel/HSlider" to="." method="_MuSlider"]
[connection signal="value_changed" from="UI/OptionsPanel/SFXVolumeLabel/HSlider" to="." method="_SFSlider"]
